aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__psh__tests__psh_lit.snap
---
source: aya-assembly/src/parser/instructions/psh.rs
expression: result
---
Instruction(
    PshLit(
        HexLiteral(
            ByteOffset {
                start: 5,
                end: 9,
            },
        ),
    ),
)
