aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__psh__tests__psh_lit_var.snap
---
source: aya-assembly/src/parser/instructions/psh.rs
expression: result
---
Instruction(
    PshLit(
        Var(
            ByteOffset {
                start: 5,
                end: 8,
            },
        ),
    ),
)
