aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__psh__tests__psh_reg.snap
---
source: aya-assembly/src/parser/instructions/psh.rs
expression: result
---
Instruction(
    PshReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
    ),
)
